--- a/ether.cabal
+++ b/ether.cabal
@@ -15,12 +15,14 @@ cabal-version:       >=1.22
 library
 
   exposed-modules:     Control.Ether.Core
+                       Control.Ether.TH
                        Control.Monad.Trans.Ether.Reader
                        Control.Monad.Ether.Reader
 
   build-depends:       base >=4.8 && <4.9
                ,       transformers >=0.4.0.3
                ,       mtl >=2.2.1
+               ,       template-haskell >=2.10
 
   hs-source-dirs:      src
   default-language:    Haskell2010
