--- a/ether.cabal
+++ b/ether.cabal
@@ -28,8 +28,8 @@ library
                        Control.Ether.Wrapped
                        Control.Monad.Trans.Ether.Reader
                        Control.Monad.Trans.Ether.State
-                       Control.Monad.Trans.Ether.State.Lazy
                        Control.Monad.Ether.Reader
+                       Control.Monad.Ether.State
 
   build-depends:       base >=4.8 && <4.9
                ,       transformers >=0.4.0.3
