--- a/ether.cabal
+++ b/ether.cabal
@@ -34,6 +34,7 @@ library
                        Control.Monad.Ether.Except
                        Control.Monad.Ether.Implicit.Reader
                        Control.Monad.Ether.Implicit.State
+                       Control.Monad.Ether.Implicit.Except
 
   build-depends:       base >=4.8 && <4.9
                ,       transformers >=0.4.0.3
