--- a/ether.cabal
+++ b/ether.cabal
@@ -43,6 +43,7 @@ library
                ,       transformers >=0.4.0.3
                ,       mtl >=2.2.1
                ,       template-haskell >=2.10
+               ,       newtype-generics >=0.4.1
 
   hs-source-dirs:      src
   default-language:    Haskell2010
