Fix transformers lower bound

--- a/ether.cabal
+++ b/ether.cabal
@@ -1,5 +1,5 @@
 name:                ether
-version:             0.1.0.0
+version:             0.1.0.1
 synopsis:            Monad transformers and classes
 description:
     Ether is a Haskell library that extends @mtl@ and @transformers@ with
@@ -14,6 +14,7 @@ homepage:            https://int-index.github.io/ether/
 bug-reports:         https://github.com/int-index/ether/issues
 build-type:          Simple
 cabal-version:       >=1.22
+extra-source-files:  CHANGELOG.md
 
 source-repository head
 
@@ -53,7 +54,7 @@ library
   other-modules:       Control.Ether.Util
 
   build-depends:       base >=4.8 && <4.9
-               ,       transformers >=0.4.0.3
+               ,       transformers >=0.4.2
                ,       mtl >=2.2.1
                ,       template-haskell >=2.10
                ,       newtype-generics >=0.4.1
@@ -66,7 +67,7 @@ library
 test-suite regression
 
   build-depends:       base >=4.8 && <4.9
-               ,       transformers >=0.4.0.3
+               ,       transformers >=0.4.2
                ,       mtl >=2.2.1
                ,       tasty >=0.10
                ,       tasty-quickcheck >=0.8
