--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
+sudo: false
+
 env:
  - CABALVER=1.18 GHCVER=7.8.4
- - CABALVER=1.22 GHCVER=7.10.2
+ - CABALVER=1.22 GHCVER=7.10.1
  - CABALVER=head GHCVER=head
 
 before_install:
- - travis_retry sudo add-apt-repository -y ppa:hvr/ghc
- - travis_retry sudo apt-get update
- - travis_retry sudo apt-get install cabal-install-$CABALVER ghc-$GHCVER
  - export PATH=/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH
  - travis_retry cabal update
 
@@ -19,3 +18,15 @@ script:
  - cabal configure --enable-tests -v2
  - cabal build
  - cabal test
+
+addons:
+  apt:
+    sources:
+    - hvr-ghc
+    packages:
+    - ghc-7.8.4
+    - ghc-7.10.1
+    - ghc-head
+    - cabal-install-1.18
+    - cabal-install-1.22
+    - cabal-install-head
