--- a/ether.cabal
+++ b/ether.cabal
@@ -1,5 +1,5 @@
 name:                ether
-version:             0.3.1.1
+version:             0.4.0.0
 synopsis:            Monad transformers and classes
 description:
     Ether is a Haskell library that extends @mtl@ and @transformers@ with
@@ -62,6 +62,7 @@ library
                ,       mmorph >=1.0.4
                ,       monad-control >=1.0.0.4
                ,       transformers-base >=0.4.4
+               ,       exceptions >=0.8
                ,       template-haskell >=2.9
 
   default-language:    Haskell2010
