--- a/ether.cabal
+++ b/ether.cabal
@@ -83,7 +83,7 @@ library
                        CPP
 
   hs-source-dirs:      src
-  ghc-options:         -Wall
+  ghc-options:         -Wall -Werror
 
 
 test-suite regression
@@ -120,4 +120,4 @@ test-suite regression
                        TemplateHaskell
                        TypeFamilies
                        TypeOperators
-  ghc-options:         -Wall -fno-warn-missing-signatures
+  ghc-options:         -Wall -Werror -fno-warn-missing-signatures
