--- a/ether.cabal
+++ b/ether.cabal
@@ -66,21 +66,21 @@ library
                ,       template-haskell >=2.9
 
   default-language:    Haskell2010
-  other-extensions:    DeriveGeneric
-                       MultiParamTypeClasses
-                       TypeFamilies
-                       FlexibleInstances
-                       UndecidableInstances
-                       DataKinds
-                       GeneralizedNewtypeDeriving
-                       FunctionalDependencies
+  other-extensions:    CPP
                        ConstraintKinds
+                       DataKinds
+                       DefaultSignatures
+                       DeriveGeneric
+                       FlexibleInstances
+                       FunctionalDependencies
+                       GeneralizedNewtypeDeriving
+                       MultiParamTypeClasses
+                       PolyKinds
                        ScopedTypeVariables
                        TemplateHaskell
-                       PolyKinds
+                       TypeFamilies
                        TypeOperators
-                       DefaultSignatures
-                       CPP
+                       UndecidableInstances
 
   hs-source-dirs:      src
   ghc-options:         -Wall -Werror
