--- a/ether.cabal
+++ b/ether.cabal
@@ -27,6 +27,7 @@ library
   exposed-modules:     Control.Ether.Abbr
                        Control.Ether.Implicit.Abbr
                        Control.Ether.TH
+                       Control.Ether.TT
                        Control.Monad.Trans.Ether.Reader
                        Control.Monad.Trans.Ether.Writer
                        Control.Monad.Trans.Ether.State
