--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ sudo: false
 
 env:
  - GHCVER=7.8.4 STACK_YAML=stack-ghc-7.8.4.yaml
- - GHCVER=7.10.3 STACK_YAML=stack.yaml
+ - GHCVER=7.10.3 STACK_YAML=stack.yaml COVERAGE="YES"
 
 cache:
   directories:
@@ -20,11 +20,10 @@ install:
  - stack install --only-dependencies --no-terminal
 
 script:
- - stack test :regression --coverage --no-terminal
+ - travis/test.sh
 
 after_script:
- - stack install stack-hpc-coveralls
- - shc ether regression
+ - travis/shc.sh
 
 addons:
   apt:
