--- a/ether.cabal
+++ b/ether.cabal
@@ -5,6 +5,8 @@ description:
     Ether is a Haskell library that extends @mtl@ and @transformers@ with
     tagged monad transformers and classes in a compatible way.
 
+    Introduction https://int-index.github.io/ether/
+
 category:            Control
 license:             BSD3
 license-file:        LICENSE
