Test-suite update (T10)

--- a/ether.cabal
+++ b/ether.cabal
@@ -108,6 +108,7 @@ test-suite regression
                        Regression.T7
                        Regression.T8
                        Regression.T9
+                       Regression.T10
 
   type:                exitcode-stdio-1.0
   hs-source-dirs:      test
