--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ sudo: false
 env:
  - GHCVER=7.8.4 STACK_YAML=stack-ghc-7.8.4.yaml
  - GHCVER=7.10.3 STACK_YAML=stack.yaml COVERAGE="YES"
+ - GHCVER=8.0.1 STACK_YAML=stack-ghc-8.0.1.yaml
 
 cache:
   directories:
@@ -11,10 +12,11 @@ cache:
 before_install:
  - export PATH=/opt/ghc/$GHCVER/bin:$PATH
  - mkdir -p ~/.local/bin
- - travis_retry curl -L https://github.com/commercialhaskell/stack/releases/download/v1.0.2/stack-1.0.2-linux-x86_64.tar.gz | tar -xvz
- - mv stack-1.0.2-linux-x86_64/stack ~/.local/bin
+ - travis_retry curl -L https://github.com/commercialhaskell/stack/releases/download/v1.0.4.3/stack-1.0.4.3-linux-x86_64.tar.gz | tar -xvz
+ - mv stack-1.0.4.3-linux-x86_64/stack ~/.local/bin
  - export PATH=~/.local/bin:$PATH
  - stack --version
+ - stack setup
 
 install:
  - stack install --only-dependencies --no-terminal
