--- a/ether.cabal
+++ b/ether.cabal
@@ -67,6 +67,7 @@ library
                ,       transformers-base >=0.4.4
                ,       exceptions >=0.8
                ,       template-haskell >=2.9
+               ,       ghc-prim >=0.3
 
   default-language:    Haskell2010
   other-extensions:    CPP
@@ -77,6 +78,7 @@ library
                        FlexibleInstances
                        FunctionalDependencies
                        GeneralizedNewtypeDeriving
+                       MagicHash
                        MultiParamTypeClasses
                        ScopedTypeVariables
                        TemplateHaskell
