--- a/ether.cabal
+++ b/ether.cabal
@@ -54,10 +54,8 @@ library
                        Control.Monad.Ether.Implicit.State.Lazy
                        Control.Monad.Ether.Implicit.State.Strict
                        Control.Monad.Ether.Implicit.Except
-                       Control.Monad.Ether.Ambiguous
-                       Control.Monad.Ether.Ambiguous.State
-                       Control.Monad.Ether.Ambiguous.State.Lazy
-                       Control.Monad.Ether.Ambiguous.State.Strict
+
+  other-modules:       Control.Monad.Ether.State.Common
 
   build-depends:       base >=4.7 && <4.10
                ,       transformers >=0.4.2
