--- a/ether.cabal
+++ b/ether.cabal
@@ -57,7 +57,7 @@ library
 
   other-modules:       Control.Monad.Ether.State.Common
 
-  build-depends:       base >=4.7 && <4.10
+  build-depends:       base >=4.9 && <4.10
                ,       transformers >=0.4.2
                ,       transformers-lift >=0.1.0.1
                ,       mtl >=2.2.1
@@ -89,7 +89,7 @@ library
 
 test-suite regression
 
-  build-depends:       base >=4.7 && <4.10
+  build-depends:       base >=4.9 && <4.10
                ,       transformers >=0.4.2
                ,       mtl >=2.2.1
                ,       tasty >=0.10
@@ -124,5 +124,21 @@ test-suite regression
                        TypeApplications
                        TypeFamilies
                        TypeOperators
-                       QuasiQuotes
   ghc-options:         -Wall -fno-warn-missing-signatures
+
+
+benchmark bench
+
+  build-depends:       base >=4.9 && <4.10
+               ,       mtl >=2.2.1
+               ,       transformers >=0.4.2
+               ,       criterion >=1.1
+               ,       lens >=4.14
+               ,       ether
+
+  main-is:             Bench.hs
+
+  type:                exitcode-stdio-1.0
+  hs-source-dirs:      bench
+  default-language:    Haskell2010
+  ghc-options:         -Wall -O2
