--- a/stack.yaml
+++ b/stack.yaml
@@ -1,22 +1,69 @@
+compiler-check: match-exact
+resolver: ghc-8.0.0.20160421
+setup-info:
+  ghc:
+    linux64:
+      8.0.0.20160421:
+        url: https://downloads.haskell.org/~ghc/8.0.1-rc4/ghc-8.0.0.20160421-x86_64-unknown-linux.tar.xz
+
 packages:
 - '.'
+
 extra-deps:
+- Glob-0.7.5
 - QuickCheck-2.8.2
+- StateVar-1.1.0.4
+- abstract-deque-0.3
+- abstract-par-0.3.3
+- adjunctions-4.3
+- aeson-0.11.2.0
 - ansi-terminal-0.6.2.3
 - ansi-wl-pprint-0.6.7.3
 - async-2.1.0
+- attoparsec-0.13.0.2
+- base-orphans-0.5.4
+- bifunctors-5.3
+- blaze-builder-0.4.0.2
+- cassava-0.4.5.0
+- cereal-0.5.1.0
 - clock-0.7.2
+- comonad-5
+- contravariant-1.4
+- criterion-1.1.1.0
+- distributive-0.5.0.2
+- dlist-0.7.1.2
+- erf-2.0.0.0
 - exceptions-0.8.2.1
+- fail-4.9.0.0
+- free-4.12.4
+- hashable-1.2.4.0
+- hastache-0.6.1
+- ieee754-0.7.8
+- kan-extensions-5.0.1
+- lens-4.14
+- math-functions-0.1.6.0
 - mmorph-1.0.6
 - monad-control-1.0.1.0
+- monad-par-0.3.4.7
+- monad-par-extras-0.3.3
 - mtl-2.2.1
+- mwc-random-0.13.4.0
 - optparse-applicative-0.12.1.0
+- parallel-3.2.1.0
 - parsec-3.1.9
+- prelude-extras-0.4.0.3
 - primitive-0.6.1.0
+- profunctors-5.2
 - random-1.1
+- reflection-2.1.2
 - regex-base-0.93.2
 - regex-tdfa-1.2.2
+- scientific-0.3.4.6
+- semigroupoids-5.0.1
+- semigroups-0.18.1
+- statistics-0.13.2.3
 - stm-2.4.4.1
+- syb-0.6
 - tagged-0.8.4
 - tasty-0.11.0.3
 - tasty-quickcheck-0.8.4
@@ -26,10 +73,9 @@ extra-deps:
 - transformers-compat-0.5.1.4
 - transformers-lift-0.1.0.1
 - unbounded-delays-0.1.0.9
-compiler-check: match-exact
-resolver: ghc-8.0.0.20160421
-setup-info:
-  ghc:
-    linux64:
-      8.0.0.20160421:
-        url: https://downloads.haskell.org/~ghc/8.0.1-rc4/ghc-8.0.0.20160421-x86_64-unknown-linux.tar.xz
+- unordered-containers-0.2.7.0
+- vector-0.11.0.0
+- vector-algorithms-0.7.0.1
+- vector-binary-instances-0.2.3.2
+- vector-th-unbox-0.2.1.6
+- void-0.7.1
