--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
 
 script:
  - stack test ether:regression --coverage --no-terminal --ghc-options -Werror
- - stack bench ether:bench --no-terminal --ghc-options -Werror
+ - stack bench ether-flatten:bench --no-terminal --ghc-options -Werror
 
 after_script:
  - curl -L https://github.com/rubik/stack-hpc-coveralls/releases/download/v0.0.3.0/shc-linux-x64-7.10.2.tar.bz2 | tar -xvj
