--- a/stack.yaml
+++ b/stack.yaml
@@ -7,7 +7,8 @@ setup-info:
         url: https://downloads.haskell.org/~ghc/8.0.1-rc4/ghc-8.0.0.20160421-x86_64-unknown-linux.tar.xz
 
 packages:
-- '.'
+- 'ether'
+- 'ether-flatten'
 
 extra-deps:
 - Glob-0.7.5
