--- a/ether-flatten/ether-flatten.cabal
+++ b/ether-flatten/ether-flatten.cabal
@@ -27,6 +27,7 @@ library
   build-depends:       base >=4.9 && <4.10
                ,       ether >=0.5 && <0.6
                ,       transformers >=0.4.2
+               ,       transformers-lift >=0.1.0.1
                ,       ghc-prim >=0.3
                ,       lens >=4.14
 
