--- a/ether-flatten/ether-flatten.cabal
+++ b/ether-flatten/ether-flatten.cabal
@@ -24,6 +24,7 @@ source-repository head
 library
 
   exposed-modules:     Control.Monad.Ether.Reader.Flatten
+                 ,     Control.Ether.Flatten
   build-depends:       base >=4.9 && <4.10
                ,       ether >=0.5 && <0.6
                ,       transformers >=0.4.2
@@ -57,3 +58,4 @@ benchmark bench
   hs-source-dirs:      bench
   default-language:    Haskell2010
   ghc-options:         -Wall -O2
+  ghc-prof-options:    -fprof-auto
