--- a/.travis.yml
+++ b/.travis.yml
@@ -16,12 +16,12 @@ install:
  - stack install --only-dependencies --no-terminal
 
 script:
- - stack test ether:regression --coverage --no-terminal --ghc-options -Werror
- - stack bench ether-flatten:bench --no-terminal --ghc-options -Werror
+ - stack test ether-suite:regression --coverage --no-terminal --ghc-options -Werror
+ - stack bench ether-suite:bench --no-terminal --ghc-options -Werror
 
 after_script:
  - curl -L https://github.com/rubik/stack-hpc-coveralls/releases/download/v0.0.3.0/shc-linux-x64-7.10.2.tar.bz2 | tar -xvj
- - ./shc ether regression
+ - ./shc ether-suite regression
 
 addons:
   apt:
