Unify TaggedTrans and DispatchT

--- a/ether/ether.cabal
+++ b/ether/ether.cabal
@@ -28,15 +28,10 @@ library
 
   exposed-modules:     Control.Ether.Abbr
                        Control.Ether.Implicit.Abbr
-                       Control.Monad.Trans.Ether.Reader
-                       Control.Monad.Trans.Ether.Writer
-                       Control.Monad.Trans.Ether.State
-                       Control.Monad.Trans.Ether.State.Lazy
-                       Control.Monad.Trans.Ether.State.Strict
-                       Control.Monad.Trans.Ether.Except
                        Control.Monad.Trans.Ether.Dispatch
-                       Control.Monad.Trans.Ether.Tagged
                        Control.Monad.Ether
+                       Control.Monad.Ether.TagAttach
+                       Control.Monad.Ether.TagReplace
                        Control.Monad.Ether.Reader
                        Control.Monad.Ether.Reader.Class
                        Control.Monad.Ether.Writer
