--- a/ether-zoom/ether-zoom.cabal
+++ b/ether-zoom/ether-zoom.cabal
@@ -26,6 +26,7 @@ library
   exposed-modules:     Control.Monad.Ether.State.Zoom
   build-depends:       base >=4.9 && <4.10
                ,       ether >=0.5 && <0.6
+               ,       transformers >=0.5
                ,       lens >=4.14
                ,       reflection >=2.1
 
