--- a/ether-flatten/ether-flatten.cabal
+++ b/ether-flatten/ether-flatten.cabal
@@ -24,6 +24,7 @@ source-repository head
 library
 
   exposed-modules:     Control.Monad.Ether.Reader.Flatten
+                 ,     Control.Monad.Ether.State.Flatten
                  ,     Control.Ether.Flatten
   build-depends:       base >=4.9 && <4.10
                ,       ether >=0.5 && <0.6
@@ -31,6 +32,7 @@ library
                ,       transformers-lift >=0.1.0.1
                ,       ghc-prim >=0.3
                ,       lens >=4.14
+               ,       deepseq >= 1.4
 
   default-language:    Haskell2010
   default-extensions:  PolyKinds
