Remove Proxy# and rename Dispatch to Handler

--- a/ether-zoom/ether-zoom.cabal
+++ b/ether-zoom/ether-zoom.cabal
@@ -37,4 +37,4 @@ library
                        TypeApplications
 
   hs-source-dirs:      src
-  ghc-options:         -Wall
+  ghc-options:         -Wall -O2
