--- a/ether-flatten/ether-flatten.cabal
+++ b/ether-flatten/ether-flatten.cabal
@@ -28,6 +28,7 @@ library
                  ,     Control.Ether.Flatten
   build-depends:       base >=4.9 && <4.10
                ,       ether >=0.5 && <0.6
+               ,       mtl >=2.2.1
                ,       transformers >=0.4.2
                ,       transformers-lift >=0.1.0.1
                ,       ghc-prim >=0.3
@@ -41,4 +42,4 @@ library
                        TypeApplications
 
   hs-source-dirs:      src
-  ghc-options:         -Wall
+  ghc-options:         -Wall -O2
