--- a/ether-suite/ether-suite.cabal
+++ b/ether-suite/ether-suite.cabal
@@ -57,6 +57,7 @@ benchmark bench
                ,       mtl >=2.2.1
                ,       transformers >=0.4.2
                ,       criterion >=1.1
+               ,       deepseq >=1.4
                ,       lens >=4.14
                ,       ether
                ,       ether-flatten
