--- a/ether-flatten/ether-flatten.cabal
+++ b/ether-flatten/ether-flatten.cabal
@@ -17,28 +17,56 @@ extra-source-files:  CHANGELOG.md
 
 source-repository head
 
-  type:                git
-  location:            git@github.com:int-index/ether.git
+  type: git
+  location: git@github.com:int-index/ether.git
 
 
 library
 
-  exposed-modules:     Control.Monad.Ether.Reader.Flatten
-                 ,     Control.Monad.Ether.State.Flatten
-  build-depends:       base >=4.9 && <4.11
-               ,       ether >=0.5 && <0.6
-               ,       mtl >=2.2.1
-               ,       transformers >=0.4.2
-               ,       transformers-lift >=0.1.0.1
-               ,       ghc-prim >=0.3
-               ,       lens >=4.14
-               ,       deepseq >= 1.4
+  exposed-modules:
+    Control.Monad.Ether.Reader.Flatten
+    Control.Monad.Ether.State.Flatten
 
-  default-language:    Haskell2010
-  default-extensions:  PolyKinds
-                       ScopedTypeVariables
-                       FunctionalDependencies
-                       TypeApplications
+  build-depends:
+    base >=4.9 && <4.11,
+    ether >=0.5 && <0.6,
+    mtl >=2.2.1,
+    transformers >=0.4.2,
+    transformers-lift >=0.1.0.1,
+    ghc-prim >=0.3,
+    lens >=4.14,
+    deepseq >= 1.4
 
-  hs-source-dirs:      src
-  ghc-options:         -Wall -O2
+  default-language:
+    Haskell2010
+
+  default-extensions:
+    AllowAmbiguousTypes
+    ConstraintKinds
+    DataKinds
+    DeriveGeneric
+    EmptyDataDecls
+    FlexibleContexts
+    FlexibleInstances
+    FunctionalDependencies
+    GADTs
+    GeneralizedNewtypeDeriving
+    PartialTypeSignatures
+    PolyKinds
+    ScopedTypeVariables
+    RankNTypes
+    TemplateHaskell
+    TupleSections
+    TypeApplications
+    TypeFamilies
+    TypeInType
+    TypeOperators
+    TypeSynonymInstances
+    UndecidableInstances
+    UndecidableSuperClasses
+
+  hs-source-dirs:
+    src
+
+  ghc-options:
+    -Wall -O2
