--- a/ether-suite/ether-suite.cabal
+++ b/ether-suite/ether-suite.cabal
@@ -9,63 +9,124 @@ library
 
 test-suite regression
 
-  build-depends:       base >=4.9 && <4.11
-               ,       transformers >=0.4.2
-               ,       mtl >=2.2.1
-               ,       tasty >=0.10
-               ,       tasty-quickcheck >=0.8
-               ,       QuickCheck >=2.8
-               ,       ghc-prim >=0.3
-               ,       lens >=4.14
-               ,       ether
-               ,       ether-zoom
+  build-depends:
+    base >=4.9 && <4.11,
+    transformers >=0.4.2,
+    mtl >=2.2.1,
+    tasty >=0.10,
+    tasty-quickcheck >=0.8,
+    QuickCheck >=2.8,
+    ghc-prim >=0.3,
+    lens >=4.14,
+    ether,
+    ether-zoom
 
-  main-is:             Regression.hs
-  other-modules:       Regression.T1
-                       Regression.T2
-                       Regression.T3
-                       Regression.T4
-                       Regression.T5
-                       Regression.T6
-                       Regression.T7
-                       Regression.T8
-                       Regression.T9
-                       Regression.T10
-                       Regression.T11
-                       Regression.T12
+  main-is:
+    Regression.hs
 
-  type:                exitcode-stdio-1.0
-  hs-source-dirs:      test
-  default-language:    Haskell2010
-  default-extensions:  ConstraintKinds
-                       DataKinds
-                       EmptyDataDecls
-                       FlexibleContexts
-                       GeneralizedNewtypeDeriving
-                       LambdaCase
-                       PolyKinds
-                       ScopedTypeVariables
-                       TypeApplications
-                       TypeFamilies
-                       TypeOperators
-  ghc-options:         -Wall -fno-warn-missing-signatures
+  other-modules:
+    Regression.T1
+    Regression.T2
+    Regression.T3
+    Regression.T4
+    Regression.T5
+    Regression.T6
+    Regression.T7
+    Regression.T8
+    Regression.T9
+    Regression.T10
+    Regression.T11
+    Regression.T12
+
+  type:
+    exitcode-stdio-1.0
+
+  hs-source-dirs:
+    test
+
+  default-language:
+    Haskell2010
+
+  default-extensions:
+    AllowAmbiguousTypes
+    ConstraintKinds
+    DataKinds
+    DeriveGeneric
+    EmptyDataDecls
+    FlexibleContexts
+    FlexibleInstances
+    FunctionalDependencies
+    GADTs
+    GeneralizedNewtypeDeriving
+    PartialTypeSignatures
+    PolyKinds
+    ScopedTypeVariables
+    RankNTypes
+    TemplateHaskell
+    TupleSections
+    TypeApplications
+    TypeFamilies
+    TypeInType
+    TypeOperators
+    TypeSynonymInstances
+    UndecidableInstances
+    UndecidableSuperClasses
+
+  ghc-options:
+    -Wall -fno-warn-missing-signatures
 
 
 benchmark bench
 
-  build-depends:       base >=4.9 && <4.11
-               ,       mtl >=2.2.1
-               ,       transformers >=0.4.2
-               ,       criterion >=1.1
-               ,       deepseq >=1.4
-               ,       lens >=4.14
-               ,       ether
-               ,       ether-flatten
+  build-depends:
+    base >=4.9 && <4.11,
+    mtl >=2.2.1,
+    transformers >=0.4.2,
+    criterion >=1.1,
+    deepseq >=1.4,
+    lens >=4.14,
+    ether,
+    ether-flatten
 
-  main-is:             Bench.hs
+  main-is:
+    Bench.hs
 
-  type:                exitcode-stdio-1.0
-  hs-source-dirs:      bench
-  default-language:    Haskell2010
-  ghc-options:         -Wall -O2
-  ghc-prof-options:    -fprof-auto
+  type:
+    exitcode-stdio-1.0
+
+  hs-source-dirs:
+    bench
+
+  default-language:
+    Haskell2010
+
+  default-extensions:
+    AllowAmbiguousTypes
+    ConstraintKinds
+    DataKinds
+    DeriveGeneric
+    EmptyDataDecls
+    FlexibleContexts
+    FlexibleInstances
+    FunctionalDependencies
+    GADTs
+    GeneralizedNewtypeDeriving
+    PartialTypeSignatures
+    PolyKinds
+    ScopedTypeVariables
+    RankNTypes
+    TemplateHaskell
+    TupleSections
+    TypeApplications
+    TypeFamilies
+    TypeInType
+    TypeOperators
+    TypeSynonymInstances
+    UndecidableInstances
+    UndecidableSuperClasses
+
+  ghc-options:
+    -Wall -O2
+
+  ghc-prof-options:
+    -fprof-auto
