--- a/ether-zoom/ether-zoom.cabal
+++ b/ether-zoom/ether-zoom.cabal
@@ -17,24 +17,49 @@ extra-source-files:  CHANGELOG.md
 
 source-repository head
 
-  type:                git
-  location:            git@github.com:int-index/ether.git
+  type: git
+  location: git@github.com:int-index/ether.git
 
 
 library
 
-  exposed-modules:     Control.Monad.Ether.State.Zoom
-  build-depends:       base >=4.9 && <4.11
-               ,       ether >=0.5 && <0.6
-               ,       transformers >=0.5
-               ,       lens >=4.14
-               ,       reflection >=2.1
+  exposed-modules:
+    Control.Monad.Ether.State.Zoom
 
-  default-language:    Haskell2010
-  default-extensions:  PolyKinds
-                       ScopedTypeVariables
-                       FunctionalDependencies
-                       TypeApplications
+  build-depends:
+    base >=4.9 && <4.11,
+    ether >=0.5 && <0.6,
+    transformers >=0.5,
+    lens >=4.14,
+    reflection >=2.1
 
-  hs-source-dirs:      src
-  ghc-options:         -Wall -O2
+  default-extensions:
+    AllowAmbiguousTypes
+    ConstraintKinds
+    DataKinds
+    DeriveGeneric
+    EmptyDataDecls
+    FlexibleContexts
+    FlexibleInstances
+    FunctionalDependencies
+    GADTs
+    GeneralizedNewtypeDeriving
+    PartialTypeSignatures
+    PolyKinds
+    ScopedTypeVariables
+    RankNTypes
+    TemplateHaskell
+    TupleSections
+    TypeApplications
+    TypeFamilies
+    TypeInType
+    TypeOperators
+    TypeSynonymInstances
+    UndecidableInstances
+    UndecidableSuperClasses
+
+  hs-source-dirs:
+    src
+
+  ghc-options:
+    -Wall -O2
