--- a/ether.cabal
+++ b/ether.cabal
@@ -32,7 +32,7 @@ library
     Ether.State
     Ether.Writer
     Ether.Except
-    Ether.Handler
+    Ether.TaggedTrans
     Ether.TagDispatch
     Ether.Internal
 
