--- a/stack.yaml
+++ b/stack.yaml
@@ -1,2 +1,8 @@
 resolver: lts-8.12
 packages: ['.']
+
+extra-deps:
+- transformers-0.5.4.0
+- transformers-lift-0.2.0.0
+- writer-cps-transformers-0.1.1.3
+- writer-cps-mtl-0.1.1.4
